--- a/app/src/main/res/layout/activity_calendar_event_details.xml
+++ b/app/src/main/res/layout/activity_calendar_event_details.xml
@@ -70,11 +70,13 @@
 
     <Button
         android:id="@+id/calendar_event_details_DatePicker_btn"
-        style="@style/Widget.AppCompat.Button"
+        style="@style/Widget.Material3.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="72dp"
+        android:textSize="16sp"
+        android:backgroundTint="#9975A347"
         android:onClick="openDatePicker"
         android:text="@string/str_calendar_event_details_Date"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,6 +86,11 @@
         android:id="@+id/calendar_event_details_Save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+        android:backgroundTint="#9975A347"
         android:layout_marginTop="256dp"
         android:layout_marginEnd="72dp"
         android:text="@string/str_calendar_event_details_Save"
@@ -96,8 +103,11 @@
         android:id="@+id/calendar_event_details_Cancel_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#99DE3E25"
         android:layout_marginTop="272dp"
         android:layout_marginEnd="73dp"
+        app:cornerRadius="18dp"
+
         android:text="@string/str_calendar_event_details_Cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/calendar_event_details_Save_btn"
@@ -110,6 +120,11 @@
         android:id="@+id/calendar_event_details_DeleteEvent_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+        android:backgroundTint="#99DE3E25"
         android:layout_marginTop="84dp"
         android:text="@string/str_calendar_event_details_DeleteEvent"
         app:layout_constraintEnd_toEndOf="parent"
