--- a/app/src/main/res/layout/activity_animals_detailed.xml
+++ b/app/src/main/res/layout/activity_animals_detailed.xml
@@ -14,6 +14,8 @@
         android:id="@+id/animals_detailed_ListView"
         android:layout_width="409dp"
         android:layout_height="400dp"
+        android:nestedScrollingEnabled="true"
+        android:background="#1AC2D6AD"
         android:layout_marginTop="2dp"
         app:layout_constraintBottom_toTopOf="@+id/animals_detailed_AddFeature_btn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +27,11 @@
     </ListView>
 
     <Button
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+        android:backgroundTint="#99DE3E25"
         android:id="@+id/animals_detailed_AddFeature_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,6 +43,11 @@
         app:layout_constraintStart_toEndOf="@+id/animals_detailed_Delete_btn" />
 
     <Button
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+        android:backgroundTint="#9975A347"
         android:id="@+id/animals_detailed_Delete_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,6 +58,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+        android:backgroundTint="#9975A347"
         android:id="@+id/animals_detailed_ToDo_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,6 +75,11 @@
         app:layout_constraintVertical_bias="0.372" />
 
     <Button
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+        android:backgroundTint="#9975A347"
         android:id="@+id/animals_detailed_Notes_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
