--- a/app/src/main/res/layout/activity_animals_to_do.xml
+++ b/app/src/main/res/layout/activity_animals_to_do.xml
@@ -20,10 +20,17 @@
         android:layout_width="409dp"
         android:layout_height="300dp"
         android:layout_marginTop="1dp"
+        android:nestedScrollingEnabled="true"
+        android:background="#1AC2D6AD"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_animals_to_do" />
 
     <Button
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+        android:backgroundTint="#9975A347"
         android:id="@+id/animals_to_do_Add_Btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
