--- a/app/src/main/res/layout/activity_calendar_new_event.xml
+++ b/app/src/main/res/layout/activity_calendar_new_event.xml
@@ -31,6 +31,7 @@
             app:layout_constraintTop_toBottomOf="@+id/newCalendarEvent_toolbar">
 
             <AutoCompleteTextView
+
                 android:id="@+id/auto_complete_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,13 +51,20 @@
             tools:text="@string/str_calendar_new_event_Date" />
 
         <Button
+
             android:id="@+id/calendar_new_event_DatePicker_btn"
-            style="@style/Widget.AppCompat.Button"
+            style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
+            android:backgroundTint="#94B870 "
             android:onClick="openDatePicker"
+            android:stateListAnimator="@null"
             android:text="@string/str_calendar_event_details_Date"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:cornerRadius="36dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.686"
             app:layout_constraintStart_toEndOf="@+id/calendar_new_event_Date_tv"
@@ -88,6 +96,11 @@
             app:layout_constraintTop_toBottomOf="@+id/calendar_new_event_DatePicker_btn" />
 
         <Button
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:stateListAnimator="@null"
+            app:cornerRadius="36dp"
+            android:backgroundTint="#94B870 "
             android:id="@+id/new_calendar_event_addEvent_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
