--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -14,6 +14,8 @@
         android:id="@+id/notes_ListView"
         android:layout_width="409dp"
         android:layout_height="480dp"
+        android:nestedScrollingEnabled="true"
+        android:background="#1AC2D6AD"
         android:layout_marginTop="36dp"
         app:layout_constraintBottom_toTopOf="@+id/notes_New_btn"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,6 +23,11 @@
         app:layout_constraintVertical_bias="0.194" />
 
     <Button
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+        android:backgroundTint="#9975A347"
         android:id="@+id/notes_New_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
