--- a/app/src/main/res/layout/activity_notes_new.xml
+++ b/app/src/main/res/layout/activity_notes_new.xml
@@ -19,6 +19,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
@@ -30,11 +31,17 @@
         <AutoCompleteTextView
             android:id="@+id/notes_new_auto_complete_txt"
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
             android:inputType="none" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+                android:backgroundTint="#9975A347"
         android:id="@+id/notes_new_Confirm_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,6 +52,11 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        app:cornerRadius="18dp"
+        android:backgroundTint="#99DE3E25"
         android:id="@+id/notes_new_Cancel_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,9 +70,10 @@
     <EditText
         android:id="@+id/notes_new_Note_pt"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
         android:layout_marginBottom="248dp"
-        android:ems="10"
+        android:ems="15"
         android:hint="@string/str_notes_new_Note"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/notes_new_Cancel_btn"
