--- a/app/src/main/res/layout/animals_info_adapter_view.xml
+++ b/app/src/main/res/layout/animals_info_adapter_view.xml
@@ -3,7 +3,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="100">
+    android:weightSum="100"
+    >
 
 
     <TextView
@@ -12,6 +13,10 @@
         android:text="TextView1"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:textStyle="bold"
+        android:elevation="1dp"
+        android:textColor="#334D1A"
+        android:background="#7FC2D6AD"
         android:id="@+id/animals_info_adapter_Name_tv"
         android:layout_weight="66.6"/>
 
@@ -22,10 +27,14 @@
         android:layout_weight="33.3">
 
         <TextView
+
             android:gravity="center"
             android:text="Total Number:"
             android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:background="#7FC2D6AD"
+            android:elevation="1dp"
+            android:textColor="#334D1A"
             android:id="@+id/animals_info_adapter_TotalNumber_tv"/>
 
         <TextView
@@ -33,8 +42,12 @@
             android:text="TextView3"
             android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:elevation="1dp"
+            android:background="#7FC2D6AD"
+            android:textColor="#334D1A"
             android:id="@+id/animals_info_adapter_Number_tv"
             android:layout_below="@+id/textView2"/>
+
     </LinearLayout>
 
 </LinearLayout>
