--- a/app/src/main/res/layout/crop_info.xml
+++ b/app/src/main/res/layout/crop_info.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="name"
+        android:textColor="#334D1A"
+        android:background="#7FC2D6AD"
         android:textSize="30sp"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
