--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/purple_500"
+    android:layout_height="55dp"
     android:elevation="4dp"
+    android:background="#94B870"
+    android:alpha="0.75"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 
